<resources>
    <string name="app_name">Aidu</string>
    <string name="login_tv_logo">AIDU</string>
    <string name="login_tv_user">Email</string>
    <string name="login_tv_pwd">Password</string>
    <string name="login_btn_login">Sign In</string>
    <string name="login_btn_register">Sign up</string>
    <string name="login_tv_register">No account? Create one!</string>
    <string name="register_btn_register">Create account</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_pwd">Password</string>
    <string name="register_toast_enterallfields">Please complete all fields to create a new account</string>
    <string name="register_toast_password_length">The password must have at least 6 characters</string>
    <string name="register_toast_bad_format_email">The email address is badly formatted</string>
    <string name="register_toast_email_in_use">The email address is already in use</string>
    <string name="login_toast_creden">Write your username and password to sign in.</string>
    <string name="incorrect_email">Mail is not valid</string>
    <string name="incorrect_pwd">Incorrect password.</string>
    <string name="wrong_mail_format">Mail has wrong format</string>
    <string name="auth_failed">Something went wrong. Please try again or contact us</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="login_signinalt">Or sign in with:</string>
    <string name="login_contentDesc">Login with your Google account</string>
    <string name="login_googleSignIn_error">Something went wrong with Google login</string>
    <string name="web_client_id">78091639469-gi5hkerek8ojr185uep14df68jl81bmi.apps.googleusercontent.com</string>
    <string name="main_title">Available Services</string>
    <string name="search_title">Service Search</string>
    <string name="new_service_title">Add a new service</string>
    <string name="new_service_activity_name">Add a new service</string>
    <string name="new_service_hint_title">Title</string>
    <string name="new_service_hint_points">Points: %d</string>
    <string name="new_service_hint_address">Address</string>
    <string name="new_service_hint_community">Community: </string>
    <string name="new_service_hint_select_community">Select Community</string>
    <string name="new_service_hint_Description">Description</string>
    <string name="new_service_text_photo">Photos</string>
    <string name="new_service_button_new">ADD SERVICE</string>
    <string name="new_service_toast_enterallfields">Please complete all fields to create a new service</string>
    <string name="new_service_toast_service_created">The service was created correctly</string>
    <string name="new_service_toast_no_more_images">You can\'t put more than %d images</string>
    <string name="new_service_photo_selection">Select a picture:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_chat">Chat</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_admin">Change Admin</string>
    <string name="action_moreInfo">More Info</string>
    <string name="action_addmember">Add member</string>
    <string name="service_points">%s points</string>
    <string name="action_leavecommunity">Leave community</string>
    <string name="type_service">Type Service</string>
    <string name="user_name">Owner: %s</string>
    <string name="service_title">%s</string>
    <string name="no_service_details">No service details</string>
    <string name="dd_mm_yyyy_hh_mm">DD/MM/YYYY || HH:MM</string>
    <string name="location">Location</string>
    <string name="send_message">Send message</string>
    <string name="toolbar_title_services">\t\t\t\t\t\tAvailable Services</string>
    <string name="mlateral_myServices">My Services</string>
    <string name="mlateral_community">Communities</string>
    <string name="mlateral_chats">Chats</string>
    <string name="mlateral_home">Home</string>
    <string name="mlateral_settings">Settings</string>
    <string name="mlateral_about_us">About us</string>
    <string name="mlateral_exit">Exit</string>
    <string name="mlateral_username">User</string>
    <string name="mlateral_email">Email</string>
    <string name="title_activity_location">Map</string>
    <string name="alert_about">About us</string>
    <string name="mlateral_points">%s points</string>
    <string name="menu_action_search">Service Search</string>
    <string name="label_search_distance">Distance: %d km</string>
    <string name="label_search_points">Points: %d</string>
    <string name="label_search_cat">Category</string>
    <string name="label_search_results">Results</string>
    <string name="new_service_toast_photos">Please select at least one photo for create a new service</string>
    <string name="new_service_toast_no_community">Please select at least one community</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_open_details">Open details for this service?</string>
    <string name="new_community_activity_name">Add Community</string>
    <string name="new_community_hint_name">Name</string>
    <string name="new_community_text_public">Make it public:</string>
    <string name="new_community_hint_address">Address</string>
    <string name="new_community_hint_Description">Description</string>
    <string name="new_community_text_photo">Photo</string>
    <string name="new_community_button_new">ADD COMMUNITY</string>
    <string name="new_community_text_swicht_Off">Off</string>
    <string name="new_community_text_swicht_On">On</string>
    <string name="new_community_toast_enterallfields">Please complete all fields to create a new community</string>
    <string name="new_community_toast_photos">Please select an icon or photo for create a new community</string>
    <string name="new_community_toast_service_created">The Community was created correctly</string>
    <string name="new_community_photo_selection">Select a picture:</string>
    <string name="communities_activity_name">Communities</string>
    <string name="communities_Options_dialog">Select an option</string>
    <string name="communities_members">Members</string>
    <string name="msg_dialog_salir">Sure you want to go?</string>
    <string name="yes">Of course!</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="cancel">cancel</string>
    <string name="communityInfo_btn_vewmembers">VIEW MEMBERS</string>
    <string name="community_Services_Change_admin">Select a new admin</string>
    <string name="community_Services_public_community">Select a community</string>
    <string name="community_Services_areSure">Are you sure that want to make %s the new admin?</string>
    <string name="community_areSure">Are you sure that want to join to this community?</string>
    <string name="community_Services_owner_changed">The Community was updated correctly</string>
    <string name="community_services_already_admin">You are already the administrator of this community</string>
    <string name="community_services_add_new">Introduce the email</string>
    <string name="community_services_joinCommunity">Introduce the code of the community</string>
    <string name="community_services_dialog_hint_username">Email</string>
    <string name="community_services_dialog_hint_Community_code">Community code</string>
    <string name="community_toast_user_not_found">User not found</string>
    <string name="community_toast_community_not_found">Community not found</string>
    <string name="community_toast_user_exist">The user is already member of this community</string>
    <string name="community_toast_Community_exist">You are already member of this community</string>
    <string name="community_toast_user_added">New user added to the community</string>
    <string name="community_dialog_exit">Are you sure that you want to leave this community?</string>
    <string name="community_dialog_delete">Are you sure that you want to delete this community?</string>
    <string name="community_dialog_addnew">Add community</string>
    <string name="community_dialog_join">Join a public community</string>
    <string name="action_more_info">More info</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="card_title">Card Title</string>
    <string name="card_subtitle">Card Sub</string>
    <string name="new_user_created">User created</string>
    <string name="cocinar">Cook</string>
    <string name="transporte">Transport</string>
    <string name="educacion">Education</string>
    <string name="limpieza">Housekeeping</string>
    <string name="tecnologia">Technology</string>
    <string name="compras">Shopping</string>
    <string name="mascotas">Pets</string>
    <string name="plantas">Plants</string>
    <string name="otros">Others</string>
    <string name="solicita">Apply</string>
    <string name="ayuda">Supply</string>
    <string name="new_service_no_community">No community</string>
    <string name="toolbar_title_my_services">My Services</string>
    <string name="atention">Atention</string>
    <string name="message_atention">Continue with the deletion?</string>
    <string name="error_standar">Error, try again</string>
    <string name="title_search_activity">Search</string>
    <string name="title_activity_chat_conversation">Talk</string>
    <string name="chat_hint">Say something</string>
    <string name="Decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="Final">End service</string>
    <string name="service_denegated">AUTO AIDU: SERVICE CANCELED</string>
    <string name="service_message_interested">AUTO AIDU: I AM INTERESTED</string>
    <string name="service_message_confirm">AUTO AIDU: AGREE!</string>
    <string name="error_service_yours">This service is yours</string>
    <string name="label_chat_window">Chats</string>
    <string name="tv_chat_service_name">Service: %s</string>
    <string name="tv_chat_service_author">Author: %s</string>
    <string name="service_finished">AUTO AIDU: SERVICE FINISHED</string>
    <string name="app_version">Version: %s</string>
    <string name="info_creacion">Created by:\t</string>
    <string name="title_activity_splash">Splash</string>
    <string name="enter">ENTER</string>
    <string name="tutorial_title_1">Need help with something?</string>
    <string name="tutorial_description_1">Create a new service and just wait. We guarantee someone will help you!</string>
    <string name="tutorial_title_2">Help other users</string>
    <string name="tutorial_description_2">Search for services and accept the ones you like. Help others and they\'ll help you</string>
    <string name="tutorial_title_3">Communities</string>
    <string name="tutorial_description_3">Create or join communities with friends, co-workers or neighbors</string>
    <string name="tutorial_title_4">Chat</string>
    <string name="tutorial_description_4">Yes, we also have chats! All your communication needs are met!</string>
    <string name="tutorial_exit">Welcome to Aidu</string>
    <string name="no_services_message_main">No available services</string>
    <string name="no_services_message_my_services">No services, create one</string>
    <string name="no_comunities_message">Create or join a community</string>
    <string name="no_chats_message">Create or join a service</string>
    <string name="title_activity_chat_community">Community Talks</string>
    <string name="select_category">Category</string>
    <string name="select_kind">Kind</string>
    <string name="new_service_toast_no_category">Please , select category</string>
</resources>