<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/mlateral_home" />

        <item
            android:id="@+id/nav_my_services"
            android:icon="@drawable/ic_my_services"
            android:title="@string/mlateral_myServices" />
        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_communities"
            android:title="@string/mlateral_community" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chats"
            android:title="@string/mlateral_chats" />
    </group>

    <group
        android:id="@+id/nav_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/mlateral_about_us" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/mlateral_exit" />
    </group>

</menu>
