<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:icon="@drawable/ic_chatc"
        android:title="@string/action_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_moreInfo"
        android:orderInCategory="100"
        android:title="@string/action_more_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_addmember"
        android:orderInCategory="90"
        android:title="@string/action_addmember"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="80"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>