<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="jjv.uem.com.aidu.UI.ServiceView"
    android:background="@color/colorPrimaryBackground">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        android:id="@+id/cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/linear_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_dialog_email"
                    android:padding="10dp"
                    android:id="@+id/iv_icon_service" />
                <jjv.uem.com.aidu.util.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:text="@string/type_service"
                    android:id="@+id/tv_type_service"
                    android:padding="10dp"
                    android:textSize="34sp"
                    android:gravity="center"
                    android:textStyle="bold"/>
                <jjv.uem.com.aidu.util.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:text="@string/service_points"
                    android:id="@+id/tv_points_service"/>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp">
                <ImageView
                    android:id="@+id/iv_photo_service"
                    android:layout_width="120dp"
                    android:layout_height="120dp" />
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <jjv.uem.com.aidu.util.TextViewCustom
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/user_name"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/ratingBar"
                    android:numStars="5"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="?android:attr/ratingBarStyleSmall"
                     />
            </LinearLayout>
            <jjv.uem.com.aidu.util.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="33sp"/>
            <jjv.uem.com.aidu.util.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yyyy_hh_mm"
                android:id="@+id/tv_datetime"
                android:layout_marginTop="10dp"/>
            <jjv.uem.com.aidu.util.TextViewCustom
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_description"
                android:text="@string/no_service_details"
                android:padding="30dp"/>
            <Button
                android:id="@+id/btn_location"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/boton_claro"
                android:text="@string/location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
            <Button
                android:id="@+id/btn_talk"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/boton_claro"
                android:text="@string/send_message"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>