<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="jjv.uem.com.aidu.UI.Login">

    <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:id="@+id/r_tv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_tv_logo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryFont"
        android:textSize="110sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/r_tv_logo"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_login"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="3dp">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/login_tv_user"
                        android:inputType="textEmailAddress"
                        android:textAlignment="textStart"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:hint="@string/login_tv_pwd"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:layout_gravity="start"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/boton_redondo"
                android:onClick="login"
                android:text="@string/login_btn_login"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/boton_redondo_claro"
                android:text="@string/login_btn_register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_signinalt"
            android:layout_marginStart="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signinalt"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="120dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:contentDescription="@string/login_contentDesc"
                android:id="@+id/iv_google_signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_google_login"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
