<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jjv.uem.com.aidu.UI.ChatConversation">

        <LinearLayout
            android:id="@+id/linear_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="16dp">


            <Button
                android:id="@+id/btnDecline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo_claro"
                android:layout_margin="8dp"
                android:text="@string/Decline" />

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo_claro"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/Accept" />
            <Button
                android:id="@+id/btnFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo_claro"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/Final" />
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_lista"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/linear_buttons"
            android:layout_above="@+id/cv_input">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lista_msgs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:background="@android:color/white"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:orientation="vertical"
            android:id="@+id/cv_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:id="@+id/footer"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@android:color/white"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:inputType="textShortMessage|textAutoCorrect"
                    android:hint="@string/chat_hint"/>

                <Button
                    android:id="@+id/btn_enviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/send_message"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondo_oscuro"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

</RelativeLayout>
